--- a/canvas.css
+++ b/canvas.css
@@ -3,27 +3,47 @@
 
 }
 
-.cf:before,.cf:after{content:"";display:table}.cf:after{clear:both}.cf{zoom:1}
+span{
+    pointer-events: none;
+}
+
+.cf:before, .cf:after {
+    content: "";
+    display: table
+}
+
+.cf:after {
+    clear: both
+}
+
+.cf {
+    zoom: 1
+}
 
 .mx-button {
     float: left;
 }
+
 .mx-button input {
     display: none;
 }
+
 .mx-button label {
     background: #ccc;
     border: 1px solid #888;
     color: #666;
     padding: 5px 10px;
 }
+
 .mx-button label:hover {
     background-color: #ddd;
 }
+
 .mx-button label:active,
 .mx-button input:focus + label {
     background-color: #aaa;
 }
+
 .mx-button input:checked + label {
     background-color: #b4b4b4;
 }
@@ -62,6 +82,7 @@ form {
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
     vertical-align: middle;
 }
+
 .mx-button label:hover {
     background-color: #e6e6e6;
     background-position: 0 -15px;
@@ -73,6 +94,7 @@ form {
     -o-transition: background-position 0.1s linear;
     transition: background-position 0.1s linear;
 }
+
 .mx-button label:active,
 .mx-button input:focus + label {
     background-color: #d9d9d9;
@@ -87,23 +109,25 @@ form {
     background: #f5f5f5;
     -webkit-box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
     -moz-box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
-    box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.15), 0 1px 2px  rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
+
 .mx-button:first-child label {
-  -webkit-border-top-left-radius: 4px;
-  -moz-border-radius-topleft: 4px;
-  border-top-left-radius: 4px;
-  -webkit-border-bottom-left-radius: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  border-bottom-left-radius: 4px;
-  margin-left: 0;
+    -webkit-border-top-left-radius: 4px;
+    -moz-border-radius-topleft: 4px;
+    border-top-left-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+    -moz-border-radius-bottomleft: 4px;
+    border-bottom-left-radius: 4px;
+    margin-left: 0;
 }
+
 .mx-button:last-child label {
-  -webkit-border-top-right-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  border-top-right-radius: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  -moz-border-radius-bottomright: 4px;
-  border-bottom-right-radius: 4px;
+    -webkit-border-top-right-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    -moz-border-radius-bottomright: 4px;
+    border-bottom-right-radius: 4px;
 }
 
